finish up changes to routing besides the styling fixes to image cropping

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,10 +62,20 @@ input{
 	color:black;
 }
 
+a {
+	color: black;
+}
+
 #cropbox {
 	background-size: contain;
 	padding: 50px;
 	border: 10px solid white
+}
+
+.cropper-container {
+	min-width: 1100px;
+	min-height: 1100px;
+	background-color: white;
 }
 
 .landingCategoryImage {
